--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <h2>Gorgonine.com</h2>
+        <div class="sticky">Gorgonine.com</div>
     </body>
 </html>
